# nixpkgs-track

./: .release-please-manifest.json  Cargo.toml  README.md  default.nix  flake.nix  release-please-config.json  shell.nix
.github/workflows/: release.yml
crates/nixpkgs-track/: CHANGELOG.md  Cargo.toml
crates/nixpkgs-track/src/: auth.rs  cli.rs  lib.rs  main.rs  utils.rs
crates/nixpkgs-track_lib/: CHANGELOG.md  Cargo.toml
crates/nixpkgs-track_lib/src/: lib.rs
src/: fetch.rs  lib.rs  main.rs  tracker.rs  utils.rs
