[workspace]
default-members = [
	"crates/nixpkgs-track"
]
members = [
    "crates/nixpkgs-track",
	"crates/nixpkgs-track_lib"
]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Track where Nixpkgs pull requests have reached."
readme = "README.md"
homepage = "https://github.com/uncenter/nixpkgs-track"
repository = "https://github.com/uncenter/nixpkgs-track"
edition = "2021"


[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
