[workspace]
default-members = [
	"crates/nixpkgs-track"
]
members = [
    "crates/nixpkgs-track",
	"crates/nixpkgs-track_lib"
]
resolver = "2"


[workspace.package]
version = "0.2.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Track where Nixpkgs pull requests have reached."
readme = "README.md"
repository = "https://github.com/uncenter/nixpkgs-track"
edition = "2021"


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
