[workspace]
default-members = ["crates/nixpkgs-track"]
members = ["crates/nixpkgs-track", "crates/nixpkgs-track_lib"]
resolver = "2"


[workspace.package]
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Track where Nixpkgs pull requests have reached."
readme = "README.md"
repository = "https://github.com/uncenter/nixpkgs-track"
edition = "2021"


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
