[package]
name = "nixpkgs-track_lib"
version = "0.2.0"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/uncenter/nixpkgs-track/tree/main/crates/nixpkgs-track_lib"
edition.workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"

miette = { version = "7.4.0", features = ["fancy"], optional = true }
log = "0.4.25"

[features]
default = []
miette = ["dep:miette"]

[lints]
workspace = true
